--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@
 }
 
 body {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "main";
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr;
   background-image: url("https://p4.wallpaperbetter.com/wallpaper/763/122/408/deep-space-4k-wallpaper-preview.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -28,10 +34,11 @@ body::before {
 
 #background-video {
   position: relative;
-  top: 0%;
-  left: 40%;
-  width: 25%;
-  z-index: -1;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  width: 30%;
+  z-index: -10;
 }
 
 #background-video img {
@@ -42,12 +49,14 @@ body::before {
   clip-path: circle(46% at 50% 50%);
 }
 header {
+  grid-area: header;
+  width: 100%;
   height: 15rem;
 }
 
 h1 {
-  position: absolute;
-  top: 15%;
+  position: relative;
+  top: 25%;
   margin-left: 10%;
   margin-right: 10%;
   width: 80%;
@@ -63,16 +72,14 @@ h2 {
 }
 
 main {
-  margin: 10%;
-  background-color: rgba(5, 86, 100, 0.387);
+  padding: 10%;
+  grid-area: main;
 }
 
 form {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  top: -8rem;
 }
 input,
 button {
@@ -85,6 +92,8 @@ button {
   box-shadow: 1px 10px 20px rgb(11, 228, 11);
 }
 ul {
+  position: relative;
+  top: 5rem;
   list-style-type: none;
 }
 li {
@@ -92,16 +101,13 @@ li {
 }
 table {
   box-shadow: 1px 10px 20px rgb(11, 228, 11);
+  margin-top: -7rem;
 }
 table,
 thead {
-  margin-top: 3rem;
   color: rgb(11, 228, 11);
   width: 100%;
   background-color: rgb(7, 43, 75);
-}
-table {
-  margin-top: -3rem;
 }
 th {
   text-align: center;
@@ -123,4 +129,20 @@ caption {
   width: 100%;
   margin-bottom: 3rem;
   box-shadow: 1px 10px 20px rgb(11, 228, 11);
+}
+
+@media screen and (max-width: 780px) {
+  caption {
+    visibility: hidden;
+  }
+  main {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  main {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
